# MPI_task

./: .gitignore  CMakeLists.txt  Functions.cpp  Functions.h  README.MD  base_cond.txt  generate_condition.py  main.cpp  tempsave.txt
